--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
