--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.1.3",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
